# placeholder_BE

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  README_sitemap.md  cspell.json  manage.py  pyproject.toml  pytest.ini  requirements.txt
meetup/: admin.py  apis.py  apps.py  schemas.py
meetup/admin/: __init__.py  meetup.py
meetup/api/: meetup.py
meetup/apis/: meetup.py  meetup_comment.py  member.py  proposal.py  schedule.py  schedule_comment.py
meetup/migrations/: 0001_initial.py  0002_initial.py  0002_meetup_image.py  0003_member.py  0004_proposal.py  0005_alter_member_role_alter_proposal_status_and_more.py  0006_schedule.py  0007_meetup_like_count_meetuplike.py  0008_meetupcomment_schedulecomment.py  0009_alter_meetupcomment_is_delete_and_more.py  0010_alter_meetup_ad_ended_at_alter_meetup_ended_at_and_more.py  0011_proposal_is_hide_to_proposer_alter_meetup_created_at_and_more.py  0012_alter_meetup_image_alter_schedule_image.py
meetup/models/: __init__.py  category.py  comment.py  meetup.py  member.py  proposal.py  schedule.py
meetup/schema/: meetup.py
meetup/schemas/: comment.py  meetup.py  member.py  proposal.py  schedule.py
notification/apis/: notification.py
notification/migrations/: 0001_initial.py  0002_alter_notification_created_at_and_more.py
notification/models/: __init__.py  notification.py
placeholder/: apis.py  asgi.py  middleware.py  pagination.py  urls.py  wsgi.py
tests/: README.md  conftest.py  test_example.py  test_fixed.py  test_integration.py  test_sitemap_command.py  test_utils.py
user/: admin.py
(+34 files in other folders)
